# open-data-spain

./: .dockerignore  .gitignore  Dockerfile  README.md  build-and-upload-docker-images.sh  docker-compose.yaml  pyproject.toml  start-webhook.sh
.github/_workflows/: deploy_production.yml  deploy_staging.yml
certs/: cert.pem  key.pem  localhost+1-key.pem  localhost+1.pem
deployment/configurations/: gunicorn.conf.py
deployment/entrypoints/: entrypoint-celery-flower.sh  entrypoint-celery-worker.sh  entrypoint-dashboard.sh
deployment/swarm/: open-data-spain.yaml  portainer-stack.yaml  registry.yaml  traefik.yaml
documentation/: index.html  openapi.yaml
landing/: index.html
oauth_providers/: open-data-spain.2023-12-05.private-key.pem
open_data_spain/: celery_app.py  start.sh
open_data_spain/apps/billing/: admin.py  middleware.py  models.py  signals.py  tasks.py  views.py
open_data_spain/apps/cache/: admin.py  apps.py  models.py
open_data_spain/apps/geopolitico/: README.md  admin.py  apps.py  models.py  signals.py
open_data_spain/apps/subastas_boe/: apps.py  models.py  tasks.py
open_data_spain/authentication/: admin.py  authentication.py  backends.py  constants.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  social_adapter.py
open_data_spain/authentication/fixtures/: github_oauth.json  users.json
open_data_spain/dashboard/: urls.py
open_data_spain/dashboard/api_keys/: apps.py  (+3 more)
open_data_spain/ods/: asgi.py  settings.py  urls.py  wsgi.py
open_data_spain/sdk/: google_maps.py  html.py  json_tools.py  minio.py  mongodb.py  notifications.py  regex.py  serializers.py  text.py  views.py  xml.py
(+165 files in other folders)
